test/should_not_compile/local_datatype_2.sml
let val x = ref NONE
    datatype t = T
    val () = x := SOME T
in ()
end;
